--- a/src/components/EmailCompose.css
+++ b/src/components/EmailCompose.css
@@ -1,10 +1,79 @@
 
-.Editor__container{
-    margin: 20%;
+
+
+.wrapperEditor{
+    display: flex;                               
+    flex-direction: column;
+   position: sticky;
+   right: 0;
+   top: auto;
+   border: 1px solid blue;
+   background-color: aliceblue;
+   padding: 15px;
+   margin-top: 5%;
+    margin-left: 40%;
+    margin-right: 10%;
+    border-radius:15px ;
+    z-index: 500;
+   
+   
+    
 }
-
-
-
-.Editor__container {
+.wrapperEditor::-webkit-scrollbar{
+    display: none;
+}
+.Editor__container__torciver{
+    display: flex;
+    margin-bottom: 10px;
+   
+}
+.Editor__container__subject{
+    display: flex;
+    margin-bottom: 10px;
+}
+.Editor__container__input__rciver{
+   
     width: 100%;
+    border: none;
+    outline: none;
+}
+.Editor__container__input__subject{
+    width: 100%;
+    border: none;
+    outline: none;
+}
+.labelto,.labelSubject {
+    margin-right: 10px;
+}
+.public-DraftEditor-content {
+   height: 200px;
+    max-height: 200px !important;
+    overflow: auto;
+    
+  }
+  .public-DraftEditor-content::-webkit-scrollbar{
+    display: none;
+  }
+.Editor__container {
+  display: flex;
+  flex-direction: column;
+ 
+  
+  
+
+   
+}
+.editor__className {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+.senderbutton {
+    width: 100px;
+    padding: 10px;
+    background-color: blue;
+    border: none;
+    outline: none;
+    color: white;
+    border-radius: 5px;
 }
