--- a/src/components/MailInbox.css
+++ b/src/components/MailInbox.css
@@ -14,6 +14,13 @@
    
     margin-bottom: 10px;
 }
+.mailList {
+    display: flex;
+    justify-content: space-between;
+   flex: 1;
+   width: 100%;
+   border: 1px solid red;
+}
 .mailSubject {
     display: flex;
     flex: 1;
@@ -22,4 +29,14 @@
 }
 .mailInbox__container__prefixIcon {
     display: flex;
+}
+.markasread{
+   
+    background-color: blue;
+   
+}
+.radio {
+    height: 50x;
+    width: 50px;
+    color :blue
 }
